@@ -74,8 +74,7 @@ MyKPrintFArgs( UBYTE*           fmt,
 
 # include <aros/asmcall.h>
 # define INTGW(q,t,n,f)							\
-	q AROS_UFH4(t, n,						\
-	  AROS_UFHA(ULONG, _a, A0),					\
+	q AROS_UFH3(t, n,						\
 	  AROS_UFHA(APTR, d, A1),					\
 	  AROS_UFHA(ULONG, _b, A5),					\
 	  AROS_UFHA(struct ExecBase *, sysbase, A6)) {			\
